fix log font and spacing

--- a/css/index.css
+++ b/css/index.css
@@ -226,6 +226,10 @@ main.fullwidth {
   color: red;
 }
 
+.log {
+  font-family: monospace;
+}
+
 .log::before {
   content: ">";
   padding-right: 8px;
